[package]
name = "leds"
version = "0.1.0"
authors = ["Terje Uglebakken <430725+teug91@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.57", features = ["derive"] }
futures = "0.3.5"
