[package]
name = "leds"
version = "0.1.0"
authors = ["Terje Uglebakken <430725+teug91@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.57", features = ["derive"] }
serde_json = "1.0.57"
futures = "0.3.5"
chrono = "0.4"
artnet_protocol = "0.2.0"
wgpu = "0.6.0"
shaderc = "0.6"
openssl = { version = "0.10", features = ["vendored"] }
spmc = "0.3.0"
